--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+* {
+    box-sizing: border-box;
+}
 body {
 	font-family: Raleway, sans-serif;
 	text-align: center;
-	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
@@ -11,19 +13,13 @@ header {
 	background-position: center; 
  }
 #napisywrapper {
-	/*padding: 14em 0em 14em;*/
 	height: 600px;
 	text-align: initial;
-
 }
 #napisywrapper img {
 	width: 250px;
 	margin-left: 50px;
     margin-top: 50px;
-}
-@media screen and (max-width: 1000px) {
-	
-
 }
 h1, h3 {
  	margin: 0;
@@ -54,31 +50,33 @@ h2 {
 	width: 800px;
 	margin: auto;
 }
+
+
+
 .boxy {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-gap: 20px;
     width: 70%;
     margin: 0 auto;
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(3, 1fr);
     padding: 50px 0 80px;
 }
 .box {
     border-radius: 4px;
     border: solid 1px rgba(144, 144, 144, 0.25);
     background-color: #fff;
-    padding: 20px;
+	padding: 5px 30px 20px;
+	display: grid;
+	grid-template-rows: 300px auto;
 }
 .box img {
-	position: relative;
-	margin-bottom: 20px;
+	margin: 20px 0;
 	width: 200px;
-	transition: all .2s ease-in-out; 
+	transition: all .3s ease-in-out; 
 }
-
 .box img:hover {
 	transform: scale(1.1); 
 }
-
 #srodek {
     background-color: #fff;
     padding-top: 50px;
@@ -101,7 +99,6 @@ h2 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
  }
-
 .dane {
 	padding: 15px;
 	margin: 20px;
@@ -114,19 +111,7 @@ h2 {
 	grid-column-end: 3;
 	height: 300px;
 }
-@media screen and (max-width: 1000px) {
-	#napisywrapper {text-align: center;}
-	#napisywrapper img {margin: 50px auto;}
-	.boxy {grid-template-columns: 1fr;}
-    .danewrapper {grid-template-columns: 1fr;}
-    .trzy {grid-column-start: 1; grid-column-end: 2;}
-	.raz span {display: block;}
-	.kontakt {margin-bottom: 8px;}
-	.dwa span {display: block;}
-	#srodek p {width: 80%;}
-	#onas p {width: 80%;}
-	h2 {font-size: 1.5em;}
- }
+
 iframe {
 	width: 100%;
 	height: 100%;
@@ -139,3 +124,26 @@ footer {
 	color: #fff;
 	font-weight: 500;
 }
+/* @media screen and (max-width: 1540px) {
+	.box:first-child {grid-template-rows: 330px auto;}
+}
+@media screen and (max-width: 1251px) {
+	.box:nth-child(3) {grid-template-rows: 330px auto;}
+}
+@media screen and (max-width: 1242px) {
+	.box:nth-child(2) {grid-template-rows: 330px auto;}
+} */
+@media screen and (max-width: 1000px) {
+	#napisywrapper {text-align: center;}
+	#napisywrapper img {margin: 50px auto;}
+	.boxy {grid-template-columns: 1fr;}
+    .danewrapper {grid-template-columns: 1fr;}
+    .trzy {grid-column-start: 1; grid-column-end: 2;}
+	.raz span {display: block;}
+	.kontakt {margin-bottom: 8px;}
+	.dwa span {display: block;}
+	#srodek p {width: 80%;}
+	#onas p {width: 80%;}
+	h2 {font-size: 1.5em;}
+}
+
